adds endpoints for getters by id
